--- a/client/src/Components/App/app.module.css
+++ b/client/src/Components/App/app.module.css
@@ -1,6 +1,11 @@
 *{
     box-sizing: border-box;
 } 
+html,body{
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .mainApp{
     
 }
