The initial version of the development of the opening directory

--- a/client/src/Components/HeadNavigation/stylesNavigate/btnsList_styles/btnCard.module.css
+++ b/client/src/Components/HeadNavigation/stylesNavigate/btnsList_styles/btnCard.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   margin-left: 20px;
+  user-select: none;
   cursor: pointer;
 }
 .link_btnsMain .navBtn_Card span {
