--- a/client/src/Components/HeadNavigation/stylesNavigate/btnsList_styles/btnCard.module.less
+++ b/client/src/Components/HeadNavigation/stylesNavigate/btnsList_styles/btnCard.module.less
@@ -5,6 +5,7 @@
         flex-direction: column;
         align-items: center;
         margin-left:20px;
+        user-select: none;
         cursor: pointer;
         span{
             color:gray;
