--- a/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
+++ b/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
@@ -8,8 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
 }
 .headNav .Navigate_panel .image img {
+  user-select: none;
   width: 200px;
   height: 50px;
   margin: 0;
@@ -30,6 +32,7 @@
   cursor: pointer;
   font-weight: bold;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  user-select: none;
 }
 .headNav .Navigate_panel .btn_handler_catalog .btn_catalog span {
   margin-right: 5px;
@@ -48,6 +51,7 @@
   font-size: 30px;
   cursor: pointer;
   color: black;
+  user-select: none;
 }
 .headNav .Navigate_panel .btn_cards {
   display: flex;
