--- a/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.less
+++ b/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.less
@@ -7,8 +7,10 @@
         display:flex;
         align-items: center;
         justify-content: space-around;
+        position: fixed;
        .image{
             img{
+                user-select: none;
                 width: 200px;
                 height: 50px;
                 margin: 0;
@@ -31,6 +33,7 @@
                 cursor:pointer;
                 font-weight: bold;
                 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                user-select: none;
                 span{
                     margin-right:5px;
                 }
@@ -51,6 +54,7 @@
                 font-size:30px;
                 cursor: pointer;
                 color:black;
+                user-select: none;
             }
        }
        .btn_cards {
