--- a/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
+++ b/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
@@ -2,13 +2,14 @@
   display: flex;
   margin-top: 10px;
   width: 100vw;
-  justify-content: space-around;
 }
 .headNav .Navigate_panel {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  position: fixed;
+  justify-content: center;
+  height: 100px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+  width: 100vw;
 }
 .headNav .Navigate_panel .image img {
   user-select: none;
