--- a/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
+++ b/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.css
@@ -1,14 +1,15 @@
 .headNav {
   display: flex;
+  flex-direction: column;
   margin-top: 10px;
   width: 100vw;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 .headNav .Navigate_panel {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100px;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   width: 100vw;
 }
 .headNav .Navigate_panel .image img {
