--- a/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.less
+++ b/client/src/Components/HeadNavigation/stylesNavigate/headnavigate_styles/headNav.module.less
@@ -1,15 +1,15 @@
 .headNav{
     display:flex;
+    flex-direction: column;
     margin-top:10px;
     width: 100vw;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     .Navigate_panel{
         display:flex;
         align-items: center;
         justify-content: center;
         height:100px;
-        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
         width: 100vw;
-
        .image{
             img{
                 user-select: none;
