--- a/client/src/Components/HeadNavigation/Catalog_parametres/catalog_styles/catalog_styles.module.less
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/catalog_styles/catalog_styles.module.less
@@ -2,16 +2,29 @@
    display:flex;
    justify-content: center;
    margin-top:20px;
+   background-color: white;
     .categories_content{
         background-color: #fff;
         display:flex;
         justify-content: center;
-        z-index: 2;
-        position: fixed;
-        width: 85vw;
+        z-index: 1000;
+        position: absolute;
+        width: 100%;
         .categoryLeft{
             display:flex;
+        }
+    }
+}
+@media(max-width:1200px) {
+    .catalog_background{
+        .categories_content{
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .categoryLeft{
+                display:flex;
+                flex-direction: row;
+            }
         }
     }
 }
