--- a/client/src/Components/HeadNavigation/subCatalogDown/subCatalog_styles/subCatalogstyle.module.less
+++ b/client/src/Components/HeadNavigation/subCatalogDown/subCatalog_styles/subCatalogstyle.module.less
@@ -22,3 +22,15 @@
         color:red;
     }
 }
+
+@media(max-width:1300px) {
+    .mainSubCatalog{
+        width: 60vw;
+        margin:0 auto;
+    }
+}
+@media(max-width:860px) {
+    .mainSubCatalog{
+        width: 80vw;
+    }
+}
