--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/LeftCategories/LeftCategories_styles/category-left-Card.module.css
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/LeftCategories/LeftCategories_styles/category-left-Card.module.css
@@ -5,7 +5,7 @@
   text-decoration: none;
   color: black;
   font-size: 20px;
-  width: 300px;
+  width: 250px;
   border-radius: 5px;
   user-select: none;
 }
@@ -26,4 +26,14 @@
 }
 .link_category:hover {
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 1200px) {
+  .link_category {
+    margin-right: 30px;
+  }
+  .containerLeftCard {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
