--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/BrandsSquare/styles_brands/BrandSquare.module.css
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/BrandsSquare/styles_brands/BrandSquare.module.css
@@ -29,3 +29,15 @@
 .Main_square_list .brand_link:hover {
   box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.2);
 }
+@media (max-width: 1200px) {
+  .Main_square_list {
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 85vw;
+    margin-top: 20px;
+    margin-left: 0;
+  }
+  .Main_square_list .brand_link {
+    margin-top: 10px;
+  }
+}
