--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/BrandsSquare/styles_brands/BrandSquare.module.less
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/BrandsSquare/styles_brands/BrandSquare.module.less
@@ -30,3 +30,16 @@
         box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.2);
     }
 }   
+
+@media (max-width:1200px) {
+    .Main_square_list{
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 85vw;
+        margin-top:20px;
+        margin-left:0;
+        .brand_link{
+            margin-top:10px;
+        }
+    }
+}
