--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.less
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.less
@@ -23,3 +23,17 @@
         color:red;
     }
 }
+@media(max-width:1200px) {
+    .WideRight_categories{
+        display:flex;
+        align-items: center;
+        flex-direction: row;
+        width: 80vw;
+        height: 30vh;
+        margin:0 auto;
+        margin-top:20px;
+        .Link_wideCategory_right{
+            text-align: center;
+        }
+    }
+}
