--- a/client/src/Components/HeadNavigation/btnsMain_navigate/btnsList_styles/btnCard.module.less
+++ b/client/src/Components/HeadNavigation/btnsMain_navigate/btnsList_styles/btnCard.module.less
@@ -9,7 +9,7 @@
         cursor: pointer;
         span{
             color:gray;
-            font-size:25px;
+            font-size:2vw;
         }
         p{
             color:gray;
@@ -25,5 +25,11 @@
     .navBtn_Card:hover > span,
     .navBtn_Card:hover > p {
         color:red;
+    }
+}
+
+@media (max-width:1100px) {
+    .link_btnsMain{
+        display:none;
     }
 }
