--- a/client/src/Components/HeadNavigation/subCatalogDown/subCatalog_styles/subCatalogstyle.module.css
+++ b/client/src/Components/HeadNavigation/subCatalogDown/subCatalog_styles/subCatalogstyle.module.css
@@ -22,3 +22,14 @@
 .mainSubCatalog .link_navigationSubCatalog:hover {
   color: red;
 }
+@media (max-width: 1300px) {
+  .mainSubCatalog {
+    width: 60vw;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 860px) {
+  .mainSubCatalog {
+    width: 80vw;
+  }
+}
