--- a/client/src/Components/Slider/slider_styles/slider_style.module.less
+++ b/client/src/Components/Slider/slider_styles/slider_style.module.less
@@ -1,5 +1,6 @@
 .slider_container{
     max-width: 100vw;
+    padding:20px;
     .container_slide{
         display:flex;
         justify-content: center;
@@ -9,4 +10,11 @@
             object-fit: cover;
         }
     }
+    button{
+        display:none;
+    }
 }
+
+
+
+
