The Products from SubCatalog is ready.Started to create filters for products.

--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/RightCategories_styles/category-right-Card.module.less
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/RightCategories_styles/category-right-Card.module.less
@@ -1,3 +1,23 @@
-*{
-    
+.main{
+    height: 90vh;
+}
+@media(max-width:1200px) {
+    .main{
+        height:50vh;
+    }
+}
+@media(max-width:600px) {
+    .main{
+        height: 85vh;
+    }
+}
+@media(max-width:580px) {
+    .main{
+        height: 100vh;
+    }
+}
+@media(max-width:495px) {
+    .main{
+        height: 120vh;
+    }
 }
