--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.css
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.css
@@ -7,6 +7,7 @@
   margin-left: 30px;
   margin-top: 10px;
   user-select: none;
+  z-index: 1000;
 }
 .WideRight_categories .Link_wideCategory_right {
   display: flex;
