--- a/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.less
+++ b/client/src/Components/HeadNavigation/Catalog_parametres/CategoryHelper/RightCategories/WideRightCategories/styles_wideCategories/wideCategories.module.less
@@ -7,6 +7,7 @@
     margin-left:30px;
     margin-top:10px;
     user-select: none;
+    z-index:1000;
     .Link_wideCategory_right{
         display:flex;
         flex-direction: column;
