--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.css
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.css
@@ -32,6 +32,12 @@
   color: black;
   user-select: none;
 }
+.container_filters .search_navigate .categories_search {
+  margin-top: 15px;
+}
+.container_filters .search_navigate .categories_search .toggle_container {
+  display: flex;
+}
 @media (max-width: 920px) {
   .container_filters {
     display: flex;
@@ -43,8 +49,14 @@
     display: flex;
     justify-content: center ;
     align-items: center;
+    flex-direction: column;
   }
   .container_filters .search_navigate .input_ui {
     width: 35vw;
+  }
+}
+@media (max-width: 630px) {
+  .container_filters .search_navigate .input_ui {
+    width: 55vw;
   }
 }
