--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.less
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.less
@@ -1,12 +1,31 @@
 .qb_line1{
-    h3{
-
-    }
     .toggle_container{
         display:flex;
-        align-items: center ;
+        align-items: center;
         label{
             margin: 0;
+            font-size:18px;
         }
+    }
+    .text_filter{
+        
+    }
+}
+@media(max-width:920px){
+    .qb_line1{
+        display:flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        .category_container{
+            margin-left:3rem;
+        }
+        margin: 0;
+    }
+}
+@media (max-width:460px) {
+    .qb_line1{
+        margin:0 auto;
+        flex-direction: column;
+       
     }
 }
