--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.css
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.css
@@ -1,7 +1,5 @@
 .container_filters {
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
   margin-left: 30px;
   margin-top: 20px;
@@ -10,33 +8,15 @@
   display: flex;
   align-items: center;
 }
+.container_filters .text_filter h2 {
+  text-align: center;
+  margin: 0;
+}
 .container_filters .text_filter h5 {
   font-size: 18px;
   margin-left: 7px;
   margin-top: 3px;
   color: gray;
-}
-.container_filters .search_navigate .input_ui {
-  width: 25vw;
-  height: 6vh;
-  border: 2px solid #d3d2d2;
-  padding-left: 20px;
-  font-size: 15px;
-  border-radius: 10px;
-}
-.container_filters .search_navigate span {
-  position: relative;
-  right: 40px;
-  font-size: 2rem;
-  cursor: pointer;
-  color: black;
-  user-select: none;
-}
-.container_filters .search_navigate .categories_search {
-  margin-top: 15px;
-}
-.container_filters .search_navigate .categories_search .toggle_container {
-  display: flex;
 }
 @media (max-width: 920px) {
   .container_filters {
@@ -44,19 +24,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-  }
-  .container_filters .search_navigate {
-    display: flex;
-    justify-content: center ;
-    align-items: center;
-    flex-direction: column;
-  }
-  .container_filters .search_navigate .input_ui {
-    width: 35vw;
-  }
-}
-@media (max-width: 630px) {
-  .container_filters .search_navigate .input_ui {
-    width: 55vw;
+    margin: 0;
   }
 }
