--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.less
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/leftFilters_style/leftFilter.module.less
@@ -1,7 +1,5 @@
 .container_filters{
     display:flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     margin-left:30px;
     margin-top:20px;
@@ -9,7 +7,8 @@
         display:flex;
         align-items: center;
         h2{
-            
+            text-align: center;
+            margin: 0;
         }
         h5{
             font-size:18px;
@@ -17,31 +16,7 @@
             margin-top:3px;
             color:gray;
         }
-    }
-    .search_navigate{
-        .input_ui{
-            width: 25vw;
-            height: 6vh;
-            border:2px solid #d3d2d2;
-            padding-left:20px;
-            font-size:15px;
-            border-radius: 10px;
-        }
-        span{
-            position: relative;
-            right:40px;
-            font-size:2rem;
-            cursor: pointer;
-            color:black;
-            user-select: none;
-        }
-        .categories_search{
-            margin-top:15px;
-            .toggle_container{
-                display:flex;
-            }
-        }
-   }
+    } 
 }
 @media(max-width:920px){
     .container_filters{
@@ -49,23 +24,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        .search_navigate{
-            display:flex;
-            justify-content:center ;
-            align-items: center;
-            flex-direction: column;
-            .input_ui{  
-                width: 35vw;
-            }
-        }
-    }
-}
-@media(max-width:630px) {
-    .container_filters{
-        .search_navigate{
-            .input_ui{
-                width: 55vw;
-            }
-        }
+        margin: 0;
     }
 }
