--- a/client/src/Components/CategoriesComponent/helper-categories/styles_product/categoryProducts.module.less
+++ b/client/src/Components/CategoriesComponent/helper-categories/styles_product/categoryProducts.module.less
@@ -34,15 +34,6 @@
             h4:hover{
                 color:rgb(199, 56, 56);
             }
-            .grade_star{
-                display:flex;
-                margin: 0;
-                padding: 0;
-                svg{
-                    color:gold;
-                    margin-left:3px;
-                }
-            }
             p{
                 font-size:18px;
                 span{
@@ -63,6 +54,9 @@
                 margin-bottom:30px;
                 h3{
                     font-size:25px;
+                }
+                .navLink_button{
+                    text-decoration: none;
                 }
             }
             .icons_btn{
@@ -108,14 +102,12 @@
                     margin-top:10px;
                     margin-bottom:5px;
                 }
-                .grade_star{
-                    display:flex;
-                    justify-content: center;
-                    align-items: center;
-                }
             }
             .btns_cards{
                 .join{
+                    .navLink_button{
+                        text-decoration: none;
+                    }
                     h3{
                         margin-top:7px;
                         margin-bottom:10px;
@@ -150,11 +142,6 @@
                     font-size:15px;
                     text-align: start;
                 }
-                .grade_star{
-                    display:flex;
-                    align-items: flex-start;
-                    justify-content: flex-start;
-                }
             }
             .btns_cards{
                 .icons_btn{
@@ -183,10 +170,6 @@
                 h4{
                     text-align:center;
                 }
-                .grade_star{
-                    align-items: center;
-                    justify-content: center;
-                }
             }
             .btns_cards{
                 .join{
@@ -208,10 +191,6 @@
                 width: 45vw;
                 h4{
                     text-align: start;
-                }
-                .grade_star{
-                    align-items: flex-start;
-                    justify-content: flex-start;
                 }
             }
             .image{
