--- a/client/src/Components/MainComponentWProducts/styles/mainCompon.module.css
+++ b/client/src/Components/MainComponentWProducts/styles/mainCompon.module.css
@@ -1,3 +1,25 @@
 * {
   box-sizing: border-box;
 }
+.mainContainer_content .brands_main h2 {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+.mainContainer_content .slider_popularCategories {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.mainContainer_content .slider_popularCategories h2 {
+  margin-left: 9rem;
+  margin-bottom: 10px;
+}
+@media (max-width: 650px) {
+  .mainContainer_content .slider_popularCategories {
+    display: none;
+  }
+  .mainContainer_content .slider_popularCategories h2 {
+    display: none;
+  }
+}
