--- a/client/src/Components/MainComponentWProducts/Products/styles/one_product/one_product.module.less
+++ b/client/src/Components/MainComponentWProducts/Products/styles/one_product/one_product.module.less
@@ -21,7 +21,7 @@
     h2{
         text-align: center;
         width: 15vw;
-        font-size:18px;
+        font-size:16px;
     }
     h4{
         margin: 0;
@@ -45,3 +45,32 @@
         }
     }
 }
+@media(max-width:1000px) {
+    .link_product_slider{
+        margin-left:20px;
+        width: 25vw;
+        margin-right:0;
+    }
+}
+@media(max-width:650px) {
+    .link_product_slider{
+        width: 37vw;
+        height: 65vh;
+        h2{
+            width: 20vw;
+            font-size:15px;
+        }
+        img{
+            width: 15vw;
+        }
+    }
+}
+@media(max-width:500px) {
+    .link_product_slider{
+        height: 55vh;
+        h2{
+            font-size:13px;
+        }
+    }
+}
+
