--- a/client/src/Components/MainComponentWProducts/styles/mainCompon.module.less
+++ b/client/src/Components/MainComponentWProducts/styles/mainCompon.module.less
@@ -6,8 +6,12 @@
 
     }
     .products_main{
+        
     }
     .brands_main{
+        display:flex;
+        flex-wrap: wrap;
+        flex-direction: column;
         h2{
             text-align: center;
             margin-top:50px;
@@ -35,3 +39,11 @@
         }
     }   
 } 
+@media (max-width:750px) {
+    .mainContainer_content{
+        .brands_main{
+            width: 60vw;
+            margin:0 auto;
+        }
+    }
+}
