--- a/client/src/Components/Footer/Input_footer/input_styles/inputStyle.module.less
+++ b/client/src/Components/Footer/Input_footer/input_styles/inputStyle.module.less
@@ -1,9 +1,14 @@
 .input_footer{
     height:6vh;
-    width: 15vw;
+    width: 22vw;
     border:none;
     outline:none;
     border-radius:5px;
     padding-left:10px;
     font-weight: bold;
+}
+@media(max-width:650px) {
+    .input_footer{
+        width: 40vw;
+    }
 }
