--- a/client/src/Components/Footer/footer_styles/footer_style.module.css
+++ b/client/src/Components/Footer/footer_styles/footer_style.module.css
@@ -2,30 +2,35 @@ footer {
   margin-top: 50px;
   background-color: #231f20;
 }
+footer p {
+  color: white;
+}
 footer .links_web {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding: 20px 50px 20px 30px;
 }
-footer .links_web p {
+footer .links_web .left_part_footer {
+  display: flex;
+  align-items: center;
+}
+footer .links_web .left_part_footer .svg_textJoin {
+  display: flex;
+  align-items: center;
+}
+footer .links_web .left_part_footer .svg_textJoin p {
+  margin-left: 50px;
+  margin-right: 10px;
   font-size: 15px;
+  text-align: center;
 }
-footer .links_web .logo_element {
-  width: 20vw;
-}
-footer .links_web p {
-  color: white;
-}
-footer .links_web .web_icons_connect {
+footer .links_web .left_part_footer .web_icons_connect {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 10px;
 }
-footer .links_web .web_icons_connect .cicrle {
+footer .links_web .left_part_footer .web_icons_connect .cicrle {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,12 +41,12 @@ footer .links_web .web_icons_connect .cicrle {
   margin-left: 10px;
   transition: 0.5s ease-in-out;
 }
-footer .links_web .web_icons_connect .cicrle .link_logos {
+footer .links_web .left_part_footer .web_icons_connect .cicrle .link_logos {
   width: 40px;
   height: 40px;
   border-radius: 50%;
 }
-footer .links_web .web_icons_connect .cicrle:hover {
+footer .links_web .left_part_footer .web_icons_connect .cicrle:hover {
   background-color: #535353;
   transform: translateY(-3px);
 }
@@ -54,10 +59,12 @@ footer .links_web .newsletter_wt2 .join_wt2 p {
   font-size: 15px;
   color: white;
   margin-right: 10px;
+  text-align: center;
 }
 footer .links_web .newsletter_wt2 .input_checkbox_wt2 {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 }
 footer .links_web .newsletter_wt2 .input_checkbox_wt2 p {
@@ -69,22 +76,92 @@ footer hr {
   margin: 0;
 }
 footer .additionally_content {
-  background-color: black;
+  background-color: #0e0e0e;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-left: 70px;
   padding-right: 70px;
 }
-footer .additionally_content .text_container_add {
+footer .additionally_content .join_infoText {
+  display: flex;
+  align-items: center;
+}
+footer .additionally_content .join_infoText .text_container_add {
+  width: 20vw;
   margin-left: 10px;
 }
-footer .additionally_content .text_container_add p {
+footer .additionally_content .join_infoText .text_container_add p {
   color: #87877f;
   font-size: 10px;
 }
-footer .additionally_content .payment_variants h3 {
+footer .additionally_content .payment_variants h4 {
   color: white;
   margin-bottom: 5px;
-  text-align: end;
+  text-align: center;
+}
+footer .additionally_content .payment_variants img {
+  width: 100%;
+  height: 8vh;
+}
+@media (max-width: 1300px) {
+  footer .links_web {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .links_web .left_part_footer {
+    display: flex;
+    align-items: center;
+  }
+  footer .links_web .left_part_footer p {
+    margin-left: 50px;
+    margin-right: 10px;
+  }
+}
+@media (max-width: 1200px) {
+  footer .additionally_content {
+    display: flex;
+    flex-direction: column;
+  }
+  footer .additionally_content .join_infoText {
+    flex-direction: column;
+  }
+  footer .additionally_content .join_infoText .text_container_add {
+    width: 80vw;
+  }
+}
+@media (max-width: 775px) {
+  footer .links_web {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  footer .links_web .newsletter_wt2 .input_checkbox_wt2 {
+    display: flex;
+  }
+  footer .links_web .newsletter_wt2 .input_checkbox_wt2 p {
+    text-align: center;
+    font-size: 10px;
+  }
+}
+@media (max-width: 650px) {
+  footer .links_web .left_part_footer .svg_textJoin p {
+    display: none;
+  }
+}
+@media (max-width: 550px) {
+  footer .links_web .left_part_footer .web_icons_connect .cicrle {
+    width: 40px;
+    height: 40px;
+  }
+  footer .links_web .left_part_footer .web_icons_connect .cicrle .link_logos {
+    width: 30px;
+    height: 30px;
+  }
+  footer .links_web .newsletter_wt2 .join_wt2 p {
+    display: flex;
+    flex-wrap: wrap;
+    width: 10vw;
+    font-size: 12px;
+    margin-right: 40px;
+  }
 }
