--- a/client/src/Components/MainComponentWProducts/Products/styles/list/list_products.module.less
+++ b/client/src/Components/MainComponentWProducts/Products/styles/list/list_products.module.less
@@ -3,6 +3,21 @@
     width: 100%;
     padding-left:80px;
     padding-right:70px;
+    .top_sellers_Products{
+        padding-left:100px;
+        padding-right:100px;
+        .text_innerJoin{
+            display:flex;
+            justify-content: center;
+            padding-top:20px;
+        }
+        .flex_products_leader{
+            display:flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 }
 @media(max-width:1000px) {
     .list_products_main{
