All Products are ready

--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.less
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.less
@@ -2,13 +2,13 @@
     .toggle_container{
         display:flex;
         align-items: center;
+        width: 24vw;
+        padding:5px;
         label{
             margin: 0;
             font-size:18px;
+            margin-left:3px;
         }
-    }
-    .text_filter{
-        
     }
 }
 @media(max-width:920px){
