--- a/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.css
+++ b/client/src/Components/CategoriesComponent/leftFilters_products.tsx/Filter_different_products/styles/filter_diff_prod.module.css
@@ -1,10 +1,13 @@
 .qb_line1 .toggle_container {
   display: flex;
   align-items: center;
+  width: 24vw;
+  padding: 5px;
 }
 .qb_line1 .toggle_container label {
   margin: 0;
   font-size: 18px;
+  margin-left: 3px;
 }
 @media (max-width: 920px) {
   .qb_line1 {
